--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/index.css">
 	<title>CONEXION BASE DE DATOS</title>
 </head>
 <body>
 	<header>
 		<h1>Conexión a Base de Datos</h1>
     <hr>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="./contenido/agregar.html">Agregar Datos</a></li>
-        <li><a href="./contenido/eliminar.html">Eliminar Datos</a></li>
-        <li><a href="./contenido/actualizar.html">Actualizar Datos</a></li>
-      </ul>
-    </nav>
+    <div class="div-center">
+      <div><a href="/addDates">Agregar Datos</a></div> 
+    </div>
 	</header>
 </body>
 </html>
