Disenio de la pagina

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/index.css">
-	<title>CONEXION BASE DE DATOS</title>
+	<title>Conexión Base de Datos</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
 		<h1>Conexión a Base de Datos</h1>
-    <hr>
-    <div class="div-center">
-      <div><a href="/addDates">Agregar Datos</a></div> 
-    </div>
+		<hr>
 	</header>
+	<main class="container">
+		<a href="/addDates" class="btn">Agregar Datos</a>
+	</main>
 </body>
 </html>
