--- a/public/contenido/consultar.html
+++ b/public/contenido/consultar.html
@@ -65,6 +65,50 @@
 				})
 				.catch(err => console.error(err));
 		}
+
+		function loadData() {
+			fetch("/data")
+				.then(res => res.json())
+				.then(rows => {
+					const tableHead = document.querySelector("datos");
+					const tableBody = document.querySelector("id, name");
+
+					// Limpiar tabla
+					tableHead.innerHTML = "";
+					tableBody.innerHTML = "";
+
+					if (rows.length > 0) {
+						// Encabezados
+						const headers = Object.keys(rows[0]);
+						const headRow = document.createElement("tr");
+						headers.forEach(h => {
+							const th = document.createElement("th");
+							th.textContent = h;
+							headRow.appendChild(th);
+						});
+						tableHead.appendChild(headRow);
+
+						// Filas
+						rows.forEach(row => {
+							const tr = document.createElement("tr");
+							headers.forEach(h => {
+								const td = document.createElement("td");
+								td.textContent = row[h];
+								tr.appendChild(td);
+							});
+							tableBody.appendChild(tr);
+						});
+					} else {
+						const tr = document.createElement("tr");
+						const td = document.createElement("td");
+						td.colSpan = 100;
+						td.textContent = "No hay datos";
+						tr.appendChild(td);
+						tableBody.appendChild(tr);
+					}
+				})
+				.catch(err => console.error(err));
+		}
 	</script>
 </body>
 </html>
